@@ -1,3 +1,4 @@
+* Add accesskey to widgets and buttons
 * Support Binary field in CSV import/export
 
 Version 6.0.0 - 2021-05-03
